tests/output/self_hosted/leading_indent_error.txt
tests/leading_indent_error.oomph:1: error: should be function definition, class definition or union definition

        export func main():
    ^^^^

